zod/tests/ui/fail/missing_namespace.rs
use zod::zod;

#[derive(zod)]
struct Test(usize);

fn main() {}
